# fastapi-guid-example

./: .cookiecutter.json  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.rst  CONTRIBUTING.rst  LICENSE.rst  README.rst  mypy.ini  noxfile.py  pyproject.toml
.github/workflows/: tests.yml
docs/: conf.py  index.rst  reference.rst  usage.rst
src/fastapi_guid_example/: __init__.py  __main__.py  app.py  repository.py  types.py
tests/: __init__.py  conftest.py  test_app.py  test_main.py  test_repository.py
