[tool.poetry]
name = "fastapi-guid-example"
version = "0.0.0"
description = "FastAPI GUID Example"
authors = ["Nate Mooney <nate.k.mooney@gmail.com>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/nbrengle/fastapi-guid-example"
repository = "https://github.com/nbrengle/fastapi-guid-example"
documentation = "https://fastapi-guid-example.readthedocs.io"
classifiers = [
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]

[tool.poetry.urls]
Changelog = "https://github.com/nbrengle/fastapi-guid-example/releases"

[tool.poetry.dependencies]
python = "^3.6.1"
fastapi = "^0.62.0"
uvicorn = "^0.13.1"
databases = "^0.4.1"
SQLAlchemy = "^1.3.22"
hiredis = "^1.1.0"
aioredis = "^1.3.1"
aiosqlite = "^0.16.0"
SQLAlchemy-Utils = "^0.36.8"
pytest-asyncio = "^0.14.0"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
coverage = {extras = ["toml"], version = "^5.3"}
safety = "^1.9.0"
mypy = "^0.790"
xdoctest = {extras = ["colors"], version = "^0.15.0"}
sphinx = "^3.3.1"
sphinx-autobuild = "^2020.9.1"
pre-commit = "^2.8.2"
flake8 = "^3.8.4"
black = "^20.8b1"
flake8-bandit = "^2.1.2"
flake8-bugbear = "^20.1.4"
flake8-docstrings = "^1.5.0"
flake8-rst-docstrings = "^0.0.14"
pep8-naming = "^0.11.1"
darglint = "^1.5.5"
reorder-python-imports = "^2.3.6"
pre-commit-hooks = "^3.3.0"
sphinx-rtd-theme = "^0.5.0"
sphinx-click = "^2.5.0"
Pygments = "^2.7.2"
hypothesis = "^5.43.3"

[tool.poetry.scripts]
fastapi-guid-example = "fastapi_guid_example.__main__:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["fastapi_guid_example"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
